--- a/styles/components/_navigation.scss
+++ b/styles/components/_navigation.scss
@@ -4,6 +4,7 @@
   border-bottom: 2px solid $primary-color;
   padding: 1rem 0;
   bottom: 0;
+  z-index: 5;
 }
 
 .nav--nav-list{
