--- a/styles/global/_variables.scss
+++ b/styles/global/_variables.scss
@@ -21,3 +21,7 @@ $primary-color: #0C2370;
 $secondary-color: #ED9487;
 $tertiary-color: #114884;
 $quaternary-color: #FFB59F;
+
+//layout
+
+$page-margin: 1.5rem;
