--- a/styles/layout/_layout.scss
+++ b/styles/layout/_layout.scss
@@ -8,6 +8,13 @@
   top: 0;
   margin: 0;
   overflow: auto;
+}
+
+.layout--wrapper {
+  overflow: auto;
+  max-height: 100vh;
+  height: 100%;
+  z-index: 10;
   &.open {
     margin-left: $nav-mobile-width;
     width: 100vw;
@@ -20,12 +27,8 @@
   }
 }
 
-.layout--wrapper {
-  overflow: auto;
-  max-height: 100vh;
-  height: 100%;
-}
-
 body {
   overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
